--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,11 @@
     height: 100%; /* Make the image fill the height of its parent */
     object-fit: cover; /* Ensures the aspect ratio is maintained while covering the area */
 }
-
+.navbar-brand .logo {
+    width: 100%; /* Adjust based on your navbar height */
+    max-width: 150px; /* Your desired max width */
+    height: auto;
+}
 .navbar .dropdown-toggle::after {
     border: none;
     content: "\f107";
