--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,6 @@
 .dropdown {
     position: relative;
     display: inline-block;
-    margin-left: auto;
 }
 
 /* Style the button that opens the dropdown */
@@ -63,7 +62,12 @@
     border-radius: 5px; /* Rounded corners */
     transition: background-color 0.3s; /* Smooth background color transition */
 }
-
+@media (max-width: 768px) {
+    .dropbtn {
+      font-size: 12px; /* Smaller font size for mobile */
+      padding: 5px 10px; /* Smaller padding for mobile */
+    }
+  }
 /* Dropdown content (hidden by default), with added transitions for smooth effect */
 .dropdown-content {
     display: none;
@@ -120,15 +124,6 @@
 }
 
 /*** Navbar ***/
-/* Ensure the navbar items are flexibly laid out */
-.navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-
-
 /* Adjusting the navbar brand image to fit the navbar height */
 .navbar .navbar-brand img {
     height: 100%; /* Make the image fill the height of its parent */
@@ -225,22 +220,7 @@
     transition: opacity 0.3s ease;
 }
 
-/* Adjust the dropdown button size and positioning for mobile */
-@media (max-width: 768px) {
-    .dropdown {
-        order:2; /* Ensures the dropdown is positioned after the toggler */
-        font-size: 12px; /* Smaller font size for mobile */
-     padding: 5px 10px; /* Smaller padding for mobile */
-    }
 
-    .navbar-toggler {
-        order: 3; /* Ensures toggler is in the middle */
-    }
-
-    .navbar-brand {
-        order: 1; /* Logo comes first */
-    }
-}
 
 /*** Card ***/
 
@@ -510,7 +490,7 @@
 
 .header-carousel .owl-nav {
     position: absolute;
-    width: 400px;
+    width: px;
     height: 45px;
     bottom: 30px;
     left: 50%;
