--- a/css/style.css
+++ b/css/style.css
@@ -1005,18 +1005,17 @@
     color: var(--primary);
 }
 @media (max-width: 768px) {
-    .footer h5 {
-      font-size: 16px;
-    }
-    .footer .btn-link {
-      font-size: 14px;
-    }
-    .footer p {
-      font-size: 14px;
-    }
+
+      
     .footer .btn-social {
+        display: flex;
+        justify-content: start; /* Align items to the start of the container */
+        flex-wrap: wrap; /* Allow items to wrap as needed */
       margin: 0 2px; /* Reduce space between buttons */
     }
+  }
+  .footer .btn-social a {
+    margin-right: 10px; /* Add some space between buttons */
   }
   
 
