--- a/css/style.css
+++ b/css/style.css
@@ -1237,6 +1237,9 @@ body.dark-mode .card-text {
     height: auto;
     margin-left: 20px;
     margin-bottom: 10px;
+    padding-right : 20px;
+    padding-left : 20px;
+
   }
   .english-section img.framed {
     float: right;
